# TownLink_server

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/api/: api.rs
src/helpers/: auth.rs
src/models/: attend.rs  event.rs  mod.rs  profile.rs  request.rs
src/repo/: database.rs  repository.rs
