[package]
name = "TownLink_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0" 
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = {version = "1.14.0", features = ["full"]}
tokio-postgres = "0.7.10"
bb8 = "0.8.1"
bigdecimal = "0.3.1"
pg_bigdecimal = "0.1.5"
chrono = { version = "0.4.31", features = ["serde"] }
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
num-traits = "0.2"
tungstenite = "0.15.0"
tokio-tungstenite = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }

dotenvy = "0.15" 
local-ip-address = "0.4"
reqwest = { version="0.12.12", features = ["json"] }
anyhow = "1"
jsonwebtoken = "=9.3.0"